--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "pino-pretty": "^7.3.0",
     "postcss-loader": "^6.0.0",
     "prettier": "^2.5.1",
-    "tailwindcss": "^3.0.2",
+    "sass": "^1.45.0",
+    "sass-loader": "^12.0.0",
     "typescript": "~4.5",
     "youch": "^2.2.2",
     "youch-terminal": "^1.1.1"
