--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prettier": "^2.5.1",
     "sass": "^1.45.0",
     "sass-loader": "^12.0.0",
+    "ts-loader": "^9.2.6",
     "typescript": "~4.5",
     "youch": "^2.2.2",
     "youch-terminal": "^1.1.1"
